--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,6 @@ DB_NAME=smart_maintenance
 
 PORT=5000
 TELEGRAM_BOT_TOKEN=8085243329:AAGdTicNp6NyBfKDCX5TfjaocQyhcBU1B2w
-GMAIL_USER=thaiseelan@gmail.com
-GMAIL_APP_PASSWORD=ichk pzjf dyel zlyw
-TEST_CHAT_ID=6571456440
+GMAIL_USER=your mail
+GMAIL_APP_PASSWORD=your gmmail password
+TEST_CHAT_ID=chatid
