--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ DB_NAME=smart_maintenance
 
 
 PORT=5000
-TELEGRAM_BOT_TOKEN=8085243329:AAGdTicNp6NyBfKDCX5TfjaocQyhcBU1B2w
+TELEGRAM_BOT_TOKEN=telegram token
 GMAIL_USER=your mail
 GMAIL_APP_PASSWORD=your gmmail password
 TEST_CHAT_ID=chatid
